// Original file: plugin.proto

import type { Struct as _google_protobuf_Struct, Struct__Output as _google_protobuf_Struct__Output } from '../../../google/protobuf/Struct';

export interface PluginConfiguration {
  'interactionConfiguration'?: (_google_protobuf_Struct | null);
  'pactConfiguration'?: (_google_protobuf_Struct | null);
}

export interface PluginConfiguration__Output {
  'interactionConfiguration': (_google_protobuf_Struct__Output | null);
  'pactConfiguration': (_google_protobuf_Struct__Output | null);
}
